# Term.AI

./: .gitignore  README.md  configure.py  main.py  mcp_server.py  pyproject.toml  requirements.txt  session.py  session_facade.py  session_state.py  setup.bat  ssh_client.py  ssh_session.py  test_session.py
docs/: ARCHITECTURE.md
web/: web_socket.py  web_socket_prac.py
web/static/: index.html
