[project]
name = "term-ai"
version = "1.0.0"
description = "AI-assisted SSH terminal — a human and Claude share one live shell"
requires-python = ">=3.11"
dependencies = [
    "asyncssh>=2.21",
    "pyte>=0.8",
    "mcp>=1.2",
]

[project.scripts]
term-ai = "main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "main.py",
    "mcp_server.py",
    "session_facade.py",
    "ssh_session.py",
    "ssh_client.py",
    "configure.py",
    "web/",
]
